# 2048-qt

./: BitBoardTables.cpp  BitBoardTables.h  CMakeLists.txt  CMakeLists.txt.openmp  README.md  auto.cpp  auto.h  auto_bitboard.cpp  auto_gpu.cpp  bitboard_tables.cpp  bitboard_tables.h  bitboard_tables_data.cpp  generate_tables  generate_tables.cpp  generate_tables_main.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  opencl_manager.cpp  opencl_manager.h  trainingworker.cpp  trainingworker.h  transposition_table.cpp  transposition_table.h
ai/: AIInterface.h  BitBoard.cpp  BitBoard.cpp.mmap  BitBoard.cpp.openmp  BitBoard.cpp.optimized  BitBoard.cpp.optimized2  BitBoard.cpp.precompiled  BitBoard.h  BitBoard.h.optimized  BitBoardInitializer.cpp  BitBoardInitializer.cpp.optimized  BitBoardInitializer.cpp.optimized2  BitBoardInitializer.h  BitBoardInitializer.h.optimized  BitBoardInitializer.h.optimized2  BitBoardTables.cpp  BitBoardTables.h  BitBoard_lut.cpp  BitBoard_mmap.cpp  BitBoard_simd.cpp  ExpectimaxAI.cpp  ExpectimaxAI.h  ExpectimaxWorker.cpp  ExpectimaxWorker.h  GenerateTables.cpp  HybridAI.cpp  HybridAI.h  HybridWorker.cpp  HybridWorker.h  MCTSNode.cpp  MCTSNode.h  MCTSWorker.cpp  MCTSWorker.h  ParallelExpectimaxAI.cpp  ParallelExpectimaxAI.cpp.optimized  ParallelExpectimaxAI.cpp.optimized2  ParallelExpectimaxAI.h  ParallelExpectimaxAI.h.optimized  ParallelExpectimaxWorker.cpp  ParallelExpectimaxWorker.cpp.alpha_beta  (+13 more)
ai/evaluation/: CornerStrategyEval.cpp  CornerStrategyEval.h  EnhancedEval.cpp  EnhancedEval.cpp.optimized  EnhancedEval.h  FreeTilesEval.cpp  FreeTilesEval.h  LargeNumbersConnectionEval.cpp  LargeNumbersConnectionEval.h  MergeEval.cpp  MergeEval.h  MonotonicityEval.cpp  MonotonicityEval.h  RiskEval.cpp  RiskEval.h  SmoothnessEval.cpp  SmoothnessEval.h  TilePlacementEval.cpp  TilePlacementEval.h  edge.cpp  edge.h  evaluation.cpp  evaluation.h  merge.cpp  merge.h  monotonicity.cpp  monotonicity.h  smoothness.cpp  smoothness.h  snake.cpp  snake.h  tile.cpp  tile.h
core/: GameBoard.cpp  GameBoard.h  GameState.cpp  GameState.h  board.cpp  board.h
kernels/: board_evaluation.cl  board_moves.cl  evaluation.cl  moves.cl  simulation.cl
tools/: CMakeLists.txt  CMakeLists.txt.cli  generate_tables.cpp  generate_tables.sh  generate_tables_cli.cpp  generate_tables_cli.sh  generate_tables_simple  generate_tables_simple.cpp  generate_tables_simple.sh
ui/: AIConfigDialog.cpp  AIConfigDialog.h  GameView.cpp  GameView.h  TileView.cpp  TileView.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
utils/: AnimationManager.cpp  AnimationManager.h  GameController.cpp  GameController.h  StyleManager.cpp  StyleManager.h  animation.cpp  animation.h
